--- a/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
+++ b/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
@@ -27,6 +27,88 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Hybrid\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Hybrid\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Hybrid\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Hybrid\Electron\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Hybrid\Electron\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Hybrid\Electron\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Hybrid\WebWindow\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Web\Blazor\AppDirect.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Web\Blazor\AppDirect.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Web\Blazor\AppDirect.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Web\Blazor\Server\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Web\Blazor\Server\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Web\Blazor\Server\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Web\Blazor\Server\Direct\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Web\Blazor\Server\Direct\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Web\Blazor\Server\Direct\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+
+    <AdditionalFiles Include="..\..\..\Architecture\Web\Blazor\WebAssembly\App.layerdiagram" Link="App.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
+    <None Include="..\..\..\Architecture\Web\Blazor\WebAssembly\App.layerdiagram.layout" Link="App.layerdiagram.layout" >
+      <Visible>False</Visible>
+    </None>
+    <None Include="..\..\..\Architecture\Web\Blazor\WebAssembly\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" >
+      <Visible>False</Visible>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
   </ItemGroup>
 
