--- a/sources/Applications/Cross-Platform/Linux/Android/Apps.Cross.Droid.csproj
+++ b/sources/Applications/Cross-Platform/Linux/Android/Apps.Cross.Droid.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers">
+      <Version>0.11.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Numerics.Vectors">
       <Version>4.5.0</Version>
     </PackageReference>
@@ -64,6 +67,46 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Android\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\iOS\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\macOS\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Linux\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Tizen\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Windows\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Windows\UWP\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+	<AdditionalFiles Include="..\..\..\..\Architecture\Cross\XamarinForms\Windows\WPF\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
