--- a/sources/Applications/Cross-Platform/Linux/GTK/Apps.Cross.Linux.csproj
+++ b/sources/Applications/Cross-Platform/Linux/GTK/Apps.Cross.Linux.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers">
+      <Version>0.11.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.5.3.2</Version>
     </PackageReference>
@@ -70,6 +73,12 @@
       <Project>{b4fd4484-12e8-484d-ac9d-1cf7e0766e05}</Project>
       <Name>Apps.Cross.SharedUI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram">
+      <Link>App.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
